# insta-receipt

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  sheet_templates.json
insta_receipt/: __init__.py  google_receipt_writer.py  google_spreadsheet_generator.py  main.py  receipt.py  receipt_item.py  receipt_parser.py  sheet_templates.json
insta_receipt/google_sheets/: __init__.py  service.py
insta_receipt/tools/: import_sheets.py
tests/: test_insta_receipt.py
